Websites/fermiumlabs_com/css/custom.css
/****** PLACE YOUR CUSTOM STYLES HERE ******/
/**
1. Navigator
2. Chart
3. Other stuff
4. Animations
**/
/** 1. Navigator **/



nav.fixed.reveal-nav{
	position:fixed;
	visibility:visible;
	opacity:1;
}
nav.outOfSight{
	transform: translate3d(0, 0px, 0);
  -webkit-transform: translate3d(0, 0px, 0);
  -moz-transform: translate3d(0, 0px, 0);
}
.offscreen-container {
  position: fixed;
  transform: translate3d(400%, 0, 0);
  -webkit-transform: translate3d(400%, 0, 0);
  -moz-transform: translate3d(400%, 0, 0);
  width: 25%;
  top: 0;
  height: 100%;
  min-height: 100vh;
  z-index: 20;
  transition: all 0.4s ease;
  -webkit-transition: all 0.4s ease;
  -moz-transition: all 0.4s ease;
  overflow: hidden;
}
.offscreen-container.reveal-nav {
  transform: translate3d(299.8%, 0, 0);
  -webkit-transform: translate3d(299.8%, 0, 0);
  -moz-transform: translate3d(299.8%, 0, 0);
}
.main-container.reveal-nav {
  transform: translate3d(-25%, 0, 0);
  -webkit-transform: translate3d(-25%, 0, 0);
  -moz-transform: translate3d(-25%, 0, 0);
}


.offscreen-left .main-container.reveal-nav,
.offscreen-left nav.reveal-nav {
  transform: translate3d(-400%, 0, 0) !important;
  -webkit-transform: translate3d(-400%, 0, 0) !important;
  -moz-transform: translate3d(-400%, 0, 0) !important;
}

/**2. Chart**/
.morris-chart text {
  fill: white;
}
.morris-chart path[fill='none'] {
  stroke-width: 3;
}

/**3. Other stuff**/
.policies{
	color: white;
}
.project-link a{
	font-weight: normal;

}
.project-link a:hover{
	font-weight: normal;

}

.row-centered {
    text-align:center;
}
.col-centered {
    display:inline-block;
    float:none;
    /* reset the text-align */
    text-align:left;
    /* inline-block space fix */
    margin-right:-4px;
}
.col-fixed {
    /* custom width */
    width:320px;
}
.col-min {
    /* custom min width */
    min-width:320px;
}
.col-max {
    /* custom max width */
    max-width:320px;
}

/** 4.Animations **/
.animate-in {
    -webkit-animation: fadeIn .5s ease-in;
    animation: fadeIn .5s ease-in;
}

.animate-out {
    -webkit-transition: opacity .5s;
    transition: opacity .5s;
    opacity: 0;
}

@-webkit-keyframes fadeIn {
    from { opacity: 0; }
    to { opacity: 1; }
}

@keyframes fadeIn {
    from { opacity: 0; }
    to { opacity: 1; }
}

/** Flip shit **/
/* entire container, keeps perspective */
.flip-container {
	perspective: 1000px;
}
	/* flip the pane when hovered */
	.flip-container:hover .flipper, .flip-container.hover .flipper {
		transform: rotateY(180deg);
	}

.flip-container, .front, .back {
	width: 320px;
	height: 480px;
}

/* flip speed goes here */
.flipper {
	transition: 0.6s;
	transform-style: preserve-3d;

	position: relative;
}

/* hide back of pane during swap */
.front, .back {
	backface-visibility: hidden;

	position: absolute;
	top: 0;
	left: 0;
}

/* front pane, placed above back */
.front {
	z-index: 2;
	/* for firefox 31 */
	transform: rotateY(0deg);
}

/* back, initially hidden pane */
.back {
	transform: rotateY(180deg);
}
.flip-container:hover .flipper, .flip-container.hover .flipper, .flip-container.flip .flipper {
	transform: rotateY(180deg);
}



@media all and (max-width: 767px){
.offscreen-container{
width: 100%;
}
.offscreen-container.reveal-nav{
transform: translate3d(0,0,0);
-webkit-transform: translate3d(0,0,0);
}
}

@media (max-width: 990px){
.module.widget-handle {
line-height: 60px;
min-height: 60px;
border-top: 0px;
}
}

